# futu_ai_quant

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  sim_trader.py
.github/workflows/: ci.yml
docs/: GUIDE.md
futu_ai_quant/: __init__.py  __main__.py
futu_ai_quant/analysis/: __init__.py  analysts.py  data_quality.py  portfolio.py  slim.py  stock.py
futu_ai_quant/backtest/: __init__.py  signals.py
futu_ai_quant/brokers/: __init__.py
futu_ai_quant/cli/: __init__.py  analyze.py  backtest.py  intraday_t.py  intraday_watch.py  sim.py
futu_ai_quant/config/: __init__.py  prompts.py  settings.py
futu_ai_quant/decision/: __init__.py  ai.py  display.py  rules.py  storage.py  validation.py
futu_ai_quant/domain/: __init__.py  positions.py
futu_ai_quant/history/: __init__.py  trades.py
futu_ai_quant/indicators/: __init__.py  ensemble.py  intraday.py  iv.py  kline_cache.py  technical.py
futu_ai_quant/llm/: __init__.py  (+3 more)
scripts/: com.futu.intraday-t.plist.example  split_main.py  split_sim.py
tests/: conftest.py  test_bark_notify.py  test_data_quality_and_cache.py  test_decision_validation.py  test_enhancements.py  test_fees.py  test_improvements.py  test_intraday_kline.py  test_intraday_t.py  test_intraday_t_cost.py  test_intraday_t_lot.py  test_intraday_t_replay.py  test_intraday_watch.py  test_kline_cache.py  test_llm_cli.py  test_macro_risk.py  test_payload_storage.py  test_positions_and_lot.py  test_sim_engine.py  test_slim_payload.py  test_strategy_and_session.py  test_symbol_names.py  test_trade_history.py
(+51 files in other folders)
