[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "futu-ai-quant"
version = "0.2.0"
description = "港股持仓量化分析与模拟交易"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "futu-api",
    "pandas",
    "pandas-ta",
    "openai",
    "python-dotenv",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.8", "pip-tools>=7.4"]

[project.scripts]
futu-analyze = "futu_ai_quant.cli.analyze:main"
futu-sim = "futu_ai_quant.cli.sim:main"
futu-backtest = "futu_ai_quant.cli.backtest:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["futu_ai_quant*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501", "UP047"]
